Improved Nav Bar look

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -444,7 +444,7 @@
 
     .blueunder {
         text-decoration: underline;
-        text-decoration-color: darkblue;
+        text-decoration-color: teal;
     }
 
     .pictureofschool {
