--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -13,15 +13,7 @@
                
         </form>
         </li>
-        <li>
-            <a asp-action="OpenCart" asp-controller="OrderItems" style="display: inline-block; padding: 0.5rem;">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" class="bi bi-bag" viewBox="0 0 16 16">
-                    <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z" />
-                </svg>
-            </a>
-
    
-    </li>
     
 }
 else
@@ -29,7 +21,7 @@ else
     <li class="nav-item">
         <a style="color: white;" class="nav-link text-light" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" style="margin-left: 3%;">
             <a style="color: white;" class="nav-link text-light" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>
 }
