--- a/Views/Orders/StatusUpdate.cshtml
+++ b/Views/Orders/StatusUpdate.cshtml
@@ -25,8 +25,9 @@
             <select name="Status">
                 @{
 
-
+                    
                     foreach (var Status in ViewBag.Status){
+                        
                         <option value="@Status.StatusId">@Status.Name</option>
                     }
                     
@@ -37,6 +38,154 @@
         </form>
     </div>
 </div>
+
+
+
+<style>
+    .OrderStatus {
+        width: 85%;
+        position: relative;
+        margin: 5%;
+        margin-top: 10%;
+        margin-bottom: 10%;
+    }
+
+    .empty-bar {
+        background: #ddd;
+        position: absolute;
+        width: 90%;
+        height: 10px;
+        top: 50%;
+        margin-left: 5%;
+        border-radius: 5px;
+        z-index: 1;
+    }
+
+    .color-bar {
+        background: teal;
+        ;
+        position: absolute;
+        height: 10px;
+        top: 50%;
+        margin-left: 4%;
+    }
+
+    .OrderStatus ul {
+        display: flex;
+        justify-content: space-between;
+        list-style: none;
+        padding: 0;
+        position: relative;
+        margin-top: -20px;
+        z-index: 3;
+    }
+
+        .OrderStatus ul > li {
+            background: #ddd;
+            text-align: center;
+            border-radius: 50%;
+            width: 40px;
+            height: 40px;
+            position: relative;
+            transition: all 0.5s;
+            z-index: 4;
+        }
+
+    .OrderStatus .txt {
+        text-align: center;
+        margin-top: 8px;
+        width: fit-content;
+        font-weight: bolder;
+        font-size: 1rem;
+    }
+
+    .OrderStatus .bullet-1 .el,
+    .OrderStatus .bullet-2 .el,
+    .OrderStatus .bullet-3 .el,
+    .OrderStatus .bullet-4 .el {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        color: white;
+        background-color: black;
+        border-radius: 50px;
+    }
+</style>
+
+
+@{
+    if (ViewBag.StatId == 1)
+    {
+        <style>
+            .color-bar {
+                width: 0%;
+                z-index: 2;
+            }
+        </style>
+
+    }
+    if (ViewBag.StatId == 2)
+    {
+        <style>
+            .color-bar {
+                width: 31%;
+                z-index: 2;
+            }
+        </style>
+    }
+    if (ViewBag.StatId == 3)
+    {
+        <style>
+            .color-bar {
+                width: 61%;
+                z-index: 2;
+            }
+        </style>
+    }
+    if (ViewBag.StatId == 4)
+
+    {
+        <style>
+            .color-bar {
+                width: 91%;
+                z-index: 2;
+            }
+        </style>
+    }
+}
+
+
+<div class="OrderStatus">
+    <div class="empty-bar"></div>
+    <div class="color-bar"></div>
+    <ul>
+        <li class="bullet-1">
+            <div class="el"><i class="bx bx-check"></i>1</div>
+            <div class="txt">Order Placed</div>
+        </li>
+        <li class="bullet-2">
+            <div class="el"><i class="bx bx-check"></i>2</div>
+            <div class="txt">Preparing Order</div>
+        </li>
+        <li class="bullet-3">
+            <div class="el"><i class="bx bx-check"></i>3</div>
+            <div class="txt">Order Ready</div>
+        </li>
+        <li class="bullet-4">
+            <div class="el"><i class="bx bx-check"></i>4</div>
+            <div class="txt">Order Collected</div>
+        </li>
+    </ul>
+</div>
+
+
+
+<br />
+<br />
+
+
+<div>
 
 <div>
     <a asp-action="Index">Back to List</a>
