tried to add link to location section in nav.

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -47,6 +47,7 @@
                             <a style="font-weight:bold;" class="nav-link text-light" asp-area="" asp-controller="Items" asp-action="FilterByCategroy" asp-route-categore-category="Bottoms">Bottoms</a>
                         </li>
 
+                        <li><a asp-controller="Home" asp-action="Index" #location> Location</a></li>
 
 
                             @if (User.IsInRole("Admin"))
