--- a/Views/Items/Index.cshtml
+++ b/Views/Items/Index.cshtml
@@ -14,7 +14,8 @@
 
         <div class="centeredPopUP" style="margin-top:5%">
 
-            <div style="background-color:white; border-radius:28px; width:39%; margin:auto; padding:1%;" class="Item">
+            <div style="     background-color: #e0f2f1;
+     border-radius:28px; width:39%; margin:auto; padding:1%;" class="Item">
 
 
                 <img class="ItemImgage" src=" @ViewBag.Item.ImageURL" />
@@ -23,7 +24,7 @@
 
                 <h5>  @ViewBag.Item.Name </h5>
 
-                <h5> @ViewBag.Item.Price </h5>
+                <h5>$@ViewBag.Item.Price </h5>
 
 
             </div>
@@ -39,11 +40,10 @@
                     <input name="itemId" type="hidden" value="@ViewBag.Item.ItemId" />
 
                     <div>
-                        <input type="submit" value="XS" name="size" />
+
                         <input type="submit" value="S" name="size" />
                         <input type="submit" value="M" name="size" />
                         <input type="submit" value="L" name="size" />
-                        <input type="submit" value="XL" name="size" />
                     </div>
 
                 </form>
@@ -64,15 +64,24 @@
                 margin: auto;
                 padding: 20px;
                 text-align: center;
-                background-color: aliceblue;
+                background-color: #e0f2f1;
                 border: 2px solid black;
                 border-radius: 10px;
                 font-size: 24px;
                 color: black;
                 box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
             }
 
-
+           .ItemImgage{
+               overflow:hidden;
+               height:7vh;
+           }
+           body{
+               overflow:hidden;
+               margin-bottom: 0%;
+               padding-bottom: 0%;
+           }
                 .centeredPopUP input[type ="submit"] {
                     background-color: black;
                     color: #fff;
@@ -83,12 +92,18 @@
                     margin-top: 20px;
                 }
 
-            .AddToCart, .FilterButtons {
+            .AddToCart, .FilterButtons, pagebuttons {
                 display: none;
             }
 
-            .ItemsPage {
-                opacity: 5%
+            .ItemsPage{
+                opacity: 5%;
+                overflow: hidden !important;
+                height: 80vh;
+            }
+            body{
+            
+                height: 100vh;
             }
 
         </style>
@@ -127,7 +142,9 @@
         </div>
         <!--While pop up is displayed blur backgorund and hide add to cart buttons-->
         <style>
-
+            
+            
+           
             .centeredPopUP {
                 z-index: 1000;
                 position: absolute;
@@ -138,7 +155,8 @@
                 margin: auto;
                 padding: 20px;
                 text-align: center;
-                background-color: aliceblue;
+              background-color: #e0f2f1;
+                
                 border: 2px solid black;
                 border-radius: 10px;
                 font-size: 24px;
@@ -146,8 +164,16 @@
                 box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             }
 
-            .ItemsPage {
-                opacity: 5%
+           .ItemsPage {
+                opacity: 5%;
+                height: 75vh;
+                overflow: hidden !important;
+            }
+
+            body {
+              
+                height: 100vh;
+                overflow: hidden
             }
 
             .centeredPopUP input[type ="submit"] {
@@ -160,7 +186,7 @@
                 margin-top: 20px;
             }
 
-            .AddToCart, .FilterButtons {
+            .AddToCart, .FilterButtons, .pagebuttons {
                 display: none;
             }
 
@@ -308,6 +334,9 @@
                 <p>  @Html.DisplayFor(modelItem => item.Categorys.Name) </p>
 
 
+                @if (!User.IsInRole("Admin"))
+                {
+
 
                     <form asp-action="SizePicker">
 
@@ -315,8 +344,10 @@
                         <input type="hidden" name="itemId" value="@item.ItemId" />
                         <input type="submit" value="Add To Cart" class="AddToCart" />
                     </form>
-                
+                }
 
+                @if (User.IsInRole("Admin"))//if the user is in the admin role display this content
+                {
 
                     <p> cost to produce   @Html.DisplayFor(modelItem => item.CostToProduce) </p>
 
@@ -327,7 +358,7 @@
                     <a asp-action="Edit" asp-route-id="@item.ItemId">Edit</a>
 
                     <a asp-action="Delete" asp-route-id="@item.ItemId">Delete</a>
-                
+                }
 
                 <br /> <br />
             </div>
@@ -348,14 +379,14 @@
                 @if (i == ViewBag.PageNUmber)
                 {
                     // render a input submit button for the current page with value of i.
-                    <input name="Page" value="@i" type="submit" style="background-color: black; color:white; text-align:center; padding: 5px 10px; border: none; border-radius: 3px; width:50%; margin:3%; text-align:center;" />
+                    <input class="pagebuttons"name="Page" value="@i" type="submit" style="background-color: black; color:white; text-align:center; padding: 5px 10px; border: none; border-radius: 3px; width:50%; margin:3%; text-align:center;" />
 
 
                 }
                 else
                 {
                     // Render a submit button for the pthers page with a different styling form the active page with the value of i.
-                    <input name="Page" class="AddToCart" value="@i" type="submit" style="background-color: white; color: black; padding: 5px 10px; border: none; border-radius: 3px; width:35%; margin:3%; text-align:center;" />
+                    <input name="Page" class="pagebuttons" class="AddToCart" value="@i" type="submit" style="background-color: white; color: black; padding: 5px 10px; border: none; border-radius: 3px; width:35%; margin:3%; text-align:center;" />
                 }
             }
 
@@ -478,7 +509,6 @@
         }
 
 </style>
-
 
 
 
