--- a/Views/Orders/CheckOut.cshtml
+++ b/Views/Orders/CheckOut.cshtml
@@ -19,7 +19,7 @@
     @using (Html.BeginForm("submitId", "Orders", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         <div class="form-group2">
-            <h2>Please Upload Student Id</h2>
+            <h2>Upload Student Id to speed up checkout</h2>
             <label>File</label>
             <input type="file" class="form-control" name="Idfile" required />
             <span></span>
@@ -100,8 +100,7 @@
 
 
 
-        <label for="FullName">Enter Your Full Name</label>
-        <form id="studentForm">
+
                            <div>
                        <label for="FullName">Enter Your Name:</label>
                     <input type="text" id="FullName" name="fullName" value="@ViewBag.Name" required maxlength="29" title="Enter your Name" />
@@ -153,17 +152,18 @@
     }
 
 
+        input[type="text"],
+        input[type="number"],
+        textarea {
+            width: 100%;
+            padding: 10px;
+            margin: 5px 0;
+            box-sizing: border-box;
+            border: 2px solid black;
+            border-radius: 5px;
+        }
 
-        input[type="text"], type="Number"]
-    textarea {
-        width: 100%;
-        padding: 10px;
-        margin: 5px 0;
-        box-sizing: border-box;
-        border: 2px solid black;
-        border-radius: 5px;
-    }
-
+       
 
 
     input[type="submit"] {
