--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button style="color: white;"  type="submit" class="nav-link btn btn-link text-light">Logout</button>
+                <button style="color: white;"  type="submit" class="nav-link btn btn-link text-light"> &nbsp; Logout</button>
                
         </form>
         </li>
