Updated size options and made nav bar fixed on home screen.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,9 +7,17 @@
     .container {
         height: fit-content !important;
     }
+    .navbar {
+    position: fixed !important;
+    top: 0 !important;
+    width: 100% !important;
+    z-index: 1000 !important; 
+  
+    border-bottom: 1px solid black; !important; 
+}
 </style>
 
-<section id="Heading">
+<section style="margin-top: 4%;" id="Heading">
     <h1 id="MainTitle" style="text-decoration:underline;"> AVCOL Uniform</h1>
     <p style="color:white;" class="Introduction">
         Click and Collect for Avondale College's Shop.
