--- a/Views/Items/Create.cshtml
+++ b/Views/Items/Create.cshtml
@@ -33,6 +33,11 @@
                 <span asp-validation-for="ImageURL" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="YearLevelNeededtobuy" class="control-label"></label>
+                <input asp-for="YearLevelNeededtobuy " class="form-control" />
+                <span asp-validation-for="YearLevelNeededtobuy" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
