--- a/Views/Orders/CheckOut.cshtml
+++ b/Views/Orders/CheckOut.cshtml
@@ -113,7 +113,7 @@
 
             <div>
                 <label for="Year">Enter Your Year Level (9-12):</label>
-                    <input type="number" id="Year" name="Year" value="@ViewBag.year" required min="9" max="12" title="Enter Year Level between 9 and 12." />
+                    <input type="text" id="Year" name="Year" value="@ViewBag.year" required min="9" max="12" title="Enter Year Level between 9 and 12." />
             </div>
 
             <div>
