Fixed emails, added thank you message to orders page. Made sales dasboard numbers have 2dp.

--- a/Views/Items/Index.cshtml
+++ b/Views/Items/Index.cshtml
@@ -40,7 +40,7 @@
                     <input name="itemId" type="hidden" value="@ViewBag.Item.ItemId" />
                     @{
                         @if(@ViewBag.Item.YearLevelNeededtobuy != 9){
-                        <p>You must be in year (@ViewBag.Item.YearLevelNeededtobuy or higher to buy this product. </p>
+                        <p>You must be in year (@ViewBag.Item.YearLevelNeededtobuy or higher to buy this product.) </p>
                     }
                     }
                     <div>
