--- a/Views/Orders/Details.cshtml
+++ b/Views/Orders/Details.cshtml
@@ -3,6 +3,12 @@
 @{
     ViewData["Title"] = "Details";
 }
+<br />
+<h2>
+    Thank You for Your Order  @Html.DisplayFor(model => model.Customers.FullName)
+
+</h2>
+
 
 <style>
 .OrderStatus {
