--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -312,7 +312,7 @@
             <p>Come meet our friendly staff at the avondale college uniform shop during these times</p>
             <div class="hours">
 
-                <p> Monday to Friday during term time, from 8.15 am - 1.30 pm, selling the Avondale College uniform and some stationery items.</p>
+                <p> Monday to Friday during term time, from 8.15 am - 1.30 pm, selling the Avondale College uniform</p>
             </div>
             <p>When you place an order, you will receive an email detailing the pickup time and date.</p>
             <div class="buttons">
